--- a/contact-app/src/index.css
+++ b/contact-app/src/index.css
@@ -24,10 +24,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
@@ -65,4 +63,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#root {
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
